# rdfknife

./: .gitignore  README.md  USAGE.md  __init__.py  cli.py  core.py  pyproject.toml  requirements.txt
rdfknife/: __init__.py  cli.py  core.py  shell.py
tests/: test_core.py
